--- a/POC_PI_AWS-web/pom.xml
+++ b/POC_PI_AWS-web/pom.xml
@@ -28,7 +28,12 @@
 			<type>ejb</type>
 			<scope>provided</scope>
 		</dependency>
-		
+		   <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>4.0.1</version>
+      <scope>compile</scope>
+    </dependency>
 	</dependencies>
 
 	<build>
